Fix text overflowing out of scroll view when soft wrapped

--- a/stylesheets/zen.less
+++ b/stylesheets/zen.less
@@ -14,6 +14,10 @@
     width: 700px;
     margin: 0 auto;
     margin-top: 40px;
+
+    .scroll-view {
+      padding-right: 1px;
+    }
   }
 
   .gutter, .status-bar, .tab-bar, .panel-left {
